@@ -22,6 +22,10 @@ NEW FEATURES
   model, multidimensional IRT with discrete traits, DINA models, etc. See
   the examples and documentation for details
 
+BUG FIXES
+
+  - fixed bug in `bfactor()` starting values when NAs were specified in the
+  `model` argument
 
 Changes in mirt 1.5
 
